# Geopter

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
AGF/: CDGM.AGF  (+3 more)
geopter/gui/: CMakeLists.txt  GeneralConfigDlg.cpp  GeneralConfigDlg.h  GeneralConfigDlg.ui  GeopterMacroFunc.cpp  GeopterMacroFunc.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlotViewDock.cpp  PlotViewDock.h  QOpticalSystem.cpp  QOpticalSystem.h  TextViewDock.cpp  TextViewDock.h  general_configuration_dialog.cpp  general_configuration_dialog.h  layout_dialog.cpp  layout_dialog.h  lens_data_manager_dock.cpp  lens_data_manager_dock.h  longitudinal_setting_dialog.cpp  longitudinal_setting_dialog.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  paraxial_trace_dialog.cpp  paraxial_trace_dialog.h  plot_view_dock.cpp  plot_view_dock.h  renderer_qcp.cpp  renderer_qcp.h  resource.qrc  single_ray_trace_dialog.cpp  single_ray_trace_dialog.h  single_ray_trace_dialog.ui  spec_setting_dialog.cpp  spec_setting_dialog.h  spec_setting_dialog.ui  (+10 more)
geopter/gui/Analysis/: analysis_setting_dialog.cpp  chromatic_focusshift_setting_dialog.cpp  chromatic_focusshift_setting_dialog.h  chromatic_focusshift_setting_dialog.ui  field_curvature_setting_dialog.cpp  field_curvature_setting_dialog.h  field_curvature_setting_dialog.ui  first_order_data_dock.cpp  first_order_data_dock.h  layout_dialog.cpp  layout_dialog.h  layout_dock.cpp  layout_dock.h  longitudinal_aberration_dock.cpp  longitudinal_aberration_dock.h  longitudinal_setting_dialog.cpp  longitudinal_setting_dialog.h  longitudinal_setting_dialog.ui  paraxial_trace_dialog.cpp  paraxial_trace_dialog.h  paraxial_trace_dialog.ui  paraxial_trace_dock.cpp  paraxial_trace_dock.h  prescription_dock.cpp  prescription_dock.h  prescription_setting_dialog.cpp  prescription_setting_dialog.h  renderer_qcp.cpp  renderer_qcp.h  single_ray_trace_dialog.cpp  single_ray_trace_dialog.h  single_ray_trace_dock.cpp  single_ray_trace_dock.h  spot_diagram_setting_dialog.cpp  spot_diagram_setting_dialog.h  spot_diagram_setting_dialog.ui  transverse_ray_fan_dialog.cpp  transverse_ray_fan_dialog.h  transverse_ray_fan_dialog.ui  transverse_ray_fan_dock.cpp  (+1 more)
geopter/gui/AnalysisDlg/: AnalysisSettingDlg.cpp  AnalysisSettingDlg.h  ChromaticFocusShiftDlg.cpp  ChromaticFocusShiftDlg.h  ChromaticFocusShiftDlg.ui  FFT_MTFDlg.cpp  FFT_MTFDlg.h  FFT_MTFDlg.ui  FFT_PSFDlg.cpp  FFT_PSFDlg.h  FFT_PSFDlg.ui  FieldCurvatureDlg.cpp  FieldCurvatureDlg.h  FieldCurvatureDlg.ui  GeoMtfDlg.cpp  GeoMtfDlg.h  GeoMtfDlg.ui  Layout2dDlg.cpp  Layout2dDlg.h  Layout2dDlg.ui  LongitudinalDlg.cpp  LongitudinalDlg.h  LongitudinalDlg.ui  OpdFanDlg.cpp  OpdFanDlg.h  OpdFanDlg.ui  ParaxialTraceDlg.cpp  ParaxialTraceDlg.h  ParaxialTraceDlg.ui  PrescriptionDlg.cpp  PrescriptionDlg.h  PrescriptionDlg.ui  SingleRayTraceDlg.cpp  SingleRayTraceDlg.h  SingleRayTraceDlg.ui  SpotDiagramDlg.cpp  SpotDiagramDlg.h  SpotDiagramDlg.ui  TransverseRayFanDlg.cpp  TransverseRayFanDlg.h  (+4 more)
geopter/gui/Dock/: AnalysisViewDock.cpp  AnalysisViewDock.h  PlotViewDock.cpp
geopter/gui/OpticalSystemWrapper/: QFieldSpec.cpp  QFieldSpec.h  QLensDataEditor.cpp  QLensDataEditor.h  QOpticalSpec.cpp  QOpticalSpec.h  QOpticalSystem.cpp  QOpticalSystem.h  QPupilSpec.cpp  QPupilSpec.h
geopter/gui/SystemEditor/: FieldTable.cpp  FieldTable.h  FieldTableWidget.cpp  FieldTableWidget.h  FloatDelegate.cpp  FloatDelegate.h  GridTableHeaderModel.h  LensDataModel.cpp  LensDataModel.h  LensDataTableView.cpp  LensSpreadSheet.cpp  LensSpreadSheet.h  OneByteDelegate.cpp  SpecEditorDlg.cpp  SpecEditorDlg.h  SpecEditorDlg.ui  SpreadSheetItem.cpp  SpreadSheetItem.h  SurfaceData.cpp  SurfaceData.h  SurfacePropertyDlg.h  SystemDataConstant.h  SystemEditorDock.cpp  SystemEditorDock.h  SystemEditorWidget.cpp  SystemEditorWidget.h  SystemEditorWidget.ui  TableHeaderItem.h  WavelengthTable.cpp  WavelengthTable.h  WavelengthTableWidget.cpp  float_delegate.cpp  surface_property_dialog.cpp  surface_property_dialog.h  surface_property_dialog.ui  system_editor_dock.cpp  system_editor_dock.h  system_editor_widget.cpp  system_editor_widget.h
geopter/gui/analysisdialogs/: analysis_setting_dialog.h  chromatic_focusshift_setting_dialog.h  field_curvature_setting_dialog.cpp  field_curvature_setting_dialog.h  field_curvature_setting_dialog.ui  layout_dialog.h  layout_dialog.ui  longitudinal_setting_dialog.h  paraxial_trace_dialog.cpp  paraxial_trace_dialog.h  prescription_setting_dialog.h  prescription_setting_dialog.ui  single_ray_trace_dialog.cpp  single_ray_trace_dialog.h  single_ray_trace_dialog.ui  spot_diagram_setting_dialog.cpp  spot_diagram_setting_dialog.h  spot_diagram_setting_dialog.ui  transverse_ray_fan_dialog.cpp  transverse_ray_fan_dialog.h  transverse_ray_fan_dialog.ui
geopter/optical/src/: CMakeLists.txt
geopter/optical/test/: CMakeLists.txt  triplet.cpp
optical/: CMakeLists.txt  air.cpp  aperture.cpp  buchdahl_glass.cpp  circular.cpp  database.cpp  decenter_data.cpp  element.cpp  element_model.cpp  even_polynomial.cpp  field.cpp  field_spec.cpp  file_io.cpp  first_order.cpp  gap.cpp  glass.cpp  glass_catalog.cpp  interface.cpp  layout.cpp  longitudinal.cpp  medium.cpp  optical_model.cpp  optical_spec.cpp  paraxial_model.cpp  paraxial_ray.cpp  pupil_spec.cpp  ray.cpp  ray_fan.cpp  renderer.cpp  renderer_svg.cpp  rgb.cpp  sequential_model.cpp  spectral_line.cpp  spherical.cpp  surface.cpp  surface_profile.cpp  trace.cpp  trace_error.cpp  transform.cpp  wvl.cpp  (+1 more)
optical/include/: air.h  aperture.h  buchdahl_glass.h  database.h  decenter_data.h  dispersion_formula.h  element.h  element_model.h  even_polynomial.h  field.h  field_spec.h  file_io.h  first_order.h  gap.h  glass.h  glass_catalog.h  interface.h  layout.h  longitudinal.h  medium.h  optical_core.h  optical_model.h  optical_spec.h  paraxial_model.h  paraxial_path.h  paraxial_ray.h  path.h  pupil_spec.h  ray.h  ray_fan.h  renderer.h  renderer_svg.h  rgb.h  sequential_model.h  spectral_line.h  spherical.h  surface.h  surface_profile.h  trace.h  trace_error.h  (+3 more)
optical/test/: CMakeLists.txt
(+449 files in other folders)
