cmake_minimum_required(VERSION 3.5)

# If QtCreator raises MSB8020 error, check build target in project->build->build step:
# cmake --build --target ALL_BUILD (<- sometimes "all" has been set)
project(Geopter LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
message(STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY= ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

add_subdirectory(3rdparty)
add_subdirectory(geopter)

file(COPY "${CMAKE_SOURCE_DIR}/data/AGF" DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY "${CMAKE_SOURCE_DIR}/example" DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
